--- a/templates/author/add.html.twig
+++ b/templates/author/add.html.twig
@@ -1,11 +1,11 @@
+<h1>Add Author</h1>
 {# {{form(formulaire)}} #}
 
 {{form_start(formulaire)}}
 {{form_label(formulaire.username,'votre nom')}}
 {{form_widget(formulaire.username)}}
 {{form_errors(formulaire.username)}}
-
-
+<br>
 
 {#{{form_row(formulaire.username)}} #}
 {{form_label(formulaire.email)}}
