Fin Atelier ORM

--- a/templates/author/showDetails.html.twig
+++ b/templates/author/showDetails.html.twig
@@ -1,3 +1,6 @@
 <h1> Détails d'un auteur dont l'ID est {{author.id}}</h1>
-{{author.username}}
-{{author.email}}
+<div>
+    {{author.username}}
+    {{author.email}}
+</div>
+<br><a href="{{path('showAll')}}">back to list</a>
