--- a/templates/author/showAll.html.twig
+++ b/templates/author/showAll.html.twig
@@ -1,4 +1,8 @@
+{% if message is defined and message  %}
+<p>{{message}}<p>
+{% endif %}
 <h1>List authors</h1>
+{% if list is defined  %}
 <table border= "1">
     <tr> <th> Username </th> <th> Email </th> <th> Actions </th> </tr>
     {% for auteur in list %}
@@ -15,3 +19,4 @@
 </table>
 <br><a href="{{path('addForm')}}">Add an author</a>
 <br><br><a href="{{ path('listAuthorByEmail') }}" > Trier par email</a>
+{% endif %}
